apps/infra-core/test-argocd/templates/tmyapp02-ing-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmyapp02-ing
  namespace: tmyapp
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  # <-- Dùng ingressClassName thay vì annotation
  tls:
    - hosts:
      - tmyapp02.sangnguyen.win
      secretName: tmyapp02-tls
  rules:
    - host: tmyapp02.sangnguyen.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tmyapp02
                port:
                  number: 80
